[gd_scene load_steps=2 format=2]

[ext_resource path="res://HitBoxHurtBox/HurtBox.gd" type="Script" id=1]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="HurtBox" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invinciblity_ended" from="." to="." method="_on_HurtBox_invinciblity_ended"]
[connection signal="invinciblity_started" from="." to="." method="_on_HurtBox_invinciblity_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
